[tool.poetry]
name = "deltadewa"
version = "0.1.0"
description = "American options dashboard using QuantLib"
authors = ["qwertytam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
QuantLib = "^1.32"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
ipywidgets = "^8.1.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
