[project]
name = "deltadewa"
version = "0.1.0"
description = "American options dashboard using QuantLib"
readme = "README.md"
authors = [{ name = "qwertytam" }]
requires-python = ">=3.10"

dependencies = [
	"QuantLib>=1.32",
	"jupyter>=1.0.0",
	"jupyterlab>=4.0.0",
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"matplotlib>=3.7.0",
	"ipywidgets>=8.1.0",
	"plotly>=5.18.0",
	"seaborn>=0.13.2",
	"PyYAML>=5.3",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"black>=23.12.0",
	"ruff>=0.1.9",
	"pandas-stubs>=2.3.3.251201",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[dependency-groups]
dev = [
    "ruff (>=0.5.3)"
]
